--- a/mqtt/pom.xml
+++ b/mqtt/pom.xml
@@ -23,5 +23,10 @@
 			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
 			<version>1.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
